JWT token bug fixes